[package]
name = "learn_rust"
version = "0.1.0" # 发行版本
edition = "2021"  # 版次(每三年发行) 目前只有 2015、2018、2021 三个版次

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## 配置工作空间
#[workspace]
## learn_rust 这个工作空间由 "tcp_client","tcp_server" 这两个 crate 组成
#members = ["tcp_client","tcp_server","http"]