[package]
name = "learn_rust"
version = "0.1.0" # 发行版本
edition = "2021"  # 版次(每三年发行) 目前只有 2015、2018、2021 三个版次

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 构建工作空间
#[workspace]
#members = [
#    # 这里先定义当前工作空间的成员 (然后在当前 project 的根目录下执行 cargo new adder)
#    "adder",
#]


[dependencies]
tokio = {version = "1",features = ["macros"]}
futures = "0.3"
crossbeam = "0.8"
salvo = "0.25.0"
tracing-subscriber = "0.3.11"
tracing = "0.1.35"
serde = {version = "1.0.137",features = ["derive"]}
jwt = "0.16.0"
ase = "0.1.3"
hmac = "0.12.1"
sha2 = "0.10.2"

## 配置工作空间
#[workspace]
## learn_rust 这个工作空间由 "tcp_client","tcp_server" 这两个 crate 组成
#members = ["tcp_client","tcp_server","http"]